# study

./: .gitignore  .ycm_extra_conf.py.template  AUTHORS  ChangeLog  Copyright  HISTORY  README.md  VERSION
aicode/minicli2/: .gitignore  CLAUDE.md  README.md  pyproject.toml
aicode/minicli3/: .gitignore  AGENTS.md  Plans.md  README.md  pyproject.toml  show_weekday.py
aicode/mslang/: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  skills-lock.json
aicode/mslang/docs/: BUG.md  (+9 more)
aicode/mslang2/: AGENTS.md  CMakeLists.txt  PLAN.md
aicode/mslang3/: AGENTS.md  CMakeLists.txt  DESIGN.md  PLAN.md  REQUIREMENTS.md
aicode/mslang4/: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  PLAN.md  README.md  REQUIREMENTS.md  run_tests.py
aicode/mslang5/: .editorconfig  .gitattributes  AGENTS.md  CMakeLists.txt  PLAN.md  SUBAGENTS.md
aicode/mslangx-c/: AGENTS.md  CMakeLists.txt  mslangc-design.md
c/wren/: CMakeLists.txt  common.h  compiler.c  compiler.h  core.c  core.h  core.wren  core.wren.inc  debug.c  debug.h  io.c  io.h  main.c  opcodes.h  opt_meta.c  opt_meta.h  opt_meta.wren  opt_meta.wren.inc  opt_random.c  opt_random.h  opt_random.wren  opt_random.wren.inc  os.c  os.h  primitive.c  primitive.h  token_type.h  utils.c  utils.h  value.c  value.h  vm.c  vm.h  wren.h  wren_to_c_string.py
cplusplus/CoroServe/: CMakeLists.txt  README.md  boring_client.cc  boring_client.go  boring_client.py  boring_server_blocking.cc  boring_server_blocking.go  boring_server_blocking.py  boring_server_nonblocking.cc  boring_server_nonblocking.go  boring_server_nonblocking.py  common.hh  echo_client.cc  echo_client.go  echo_client.py  echo_server.cc  echo_server.go  echo_server.py  echo_server_asio.cc  echo_server_asio_stackful.cc  echo_server_asio_stackless.cc  echo_server_asio_staclful.cc  echo_server_select.cc  echo_server_thread.cc  echo_server_thread_pool.cc  echo_server_uv.cc  echo_server_uvloop.py  examples.cc  examples.hh  launch_client.py  msg_helper.cc  msg_helper.hh  run_client.py  thread_pool.hh  uv_timer_blocking.cc  uv_timer_nonblocking.cc
cplusplus/LearnGC/: CMakeLists.txt  README.md
cplusplus/Neptune/: CMakeLists.txt  Copyright  README.md  VERSION.md
cplusplus/Tadpole6/: CMakeLists.txt  base_gc.hh  builtins.cc  builtins.hh  callframe.hh  chunk.cc  chunk.hh  closure_object.cc  closure_object.hh  colorful.cc  colorful.hh  common.hh  compiler.cc  compiler.hh  compiler_helper.hh  fn_compiler.cc  fn_compiler.hh  function_object.cc  function_object.hh  gc.cc  gc.hh  harness.cc  harness.hh  lexer.cc  lexer.hh  main.cc  mark_sweep.cc  mark_sweep.hh  native_object.cc  native_object.hh  object.cc  object.hh  parser.cc  parser.hh  string_object.cc  string_object.hh  test_chunk.cc  test_colorful.cc  test_dummy.cc  test_lexer.cc  (+9 more)
cplusplus/boostpp/: CMakeLists.txt  boost_adaptors.cc  boost_algorithm.cc  boost_any.cc  boost_array.cc  boost_bimap.cc  boost_circular_buffer.cc  boost_compressed_pair.cc  boost_container.cc  boost_dynamic_bitset.cc  boost_format.cc  boost_graph.cc  boost_heap.cc  boost_intrusive.cc  boost_lexical_cast.cc  boost_make_shared.cc  boost_multi_array.cc  boost_multiindex.cc  boost_optional.cc  boost_pool.cc  boost_property_tree.cc  boost_ptr_set.cc  boost_ptr_vector.cc  boost_regex.cc  boost_scope_exit.cc  boost_scoped_array.cc  boost_scoped_ptr.cc  boost_shared_array.cc  boost_shared_ptr.cc  boost_spirit.cc  boost_string_algorithms.cc  boost_tokenizer.cc  boost_tribool.cc  boost_tuple.cc  boost_unordered.cc  boost_variant.cc  boost_weak_ptr.cc  boost_xpressive.cc  main.cc  test_scoped_array.cc
cplusplus/concurrent-servers2/: CMakeLists.txt  asio_server_sequential.cc  asio_server_sequential_coroutine.cc  asio_server_sequential_coroutine_spawn.cc  asio_server_sequential_coroutine_stackful.cc  asio_server_sequential_coroutine_stackless.cc  client_boring.cc  client_multi.py  client_sequential.cc  common.hh  conet.cc  conet.hh  examples.cc  examples.hh  main.cc  sequential_helper.cc  sequential_helper.hh  server_boring_blocking.cc  server_boring_nonblocking.cc  server_sequential.cc  server_sequential.go  server_sequential.py  server_sequential_multi_threaded.cc  server_sequential_select.cc  server_sequential_thread_pool.cc  server_sequential_uvloop.py  uv_server_sequential.cc  uv_timer_blocking.cc  uv_timer_nonblocking.cc
cplusplus/fixmath-wrapper/: CMakeLists.txt  fix16_wrapper.h  fix16_wrapper.z~  fixmath_utils.h  fixmath_wrapper.cc
cplusplus/libae-redis/: CMakeLists.txt  ae_epoll.c
cplusplus/libco/: CMakeLists.txt
cplusplus/public_logic/: CMakeLists.txt  pl_component_base.h  pl_component_map.cpp  pl_component_map.h  pl_python_utils.h  pl_unit_base.h  pl_unit_manager.cpp  pl_unit_manager.h  public_logic.cpp
cplusplus/pyutils/: CMakeLists.txt  _pyut.cc
cplusplus/sage/: CMakeLists.txt  README.md  common.h  kinds_def.h  main.cc  sage.cc  sage.h  sage.hh
cplusplus/sdbpp/: CMakeLists.txt  common.hh  macros.hh  main.cc  util.cc  util.hh
cplusplus/selectors/: CMakeLists.txt  client.cc  common.hh  examples.cc  examples.hh  harness.cc  harness.hh  main.cc  net.hh  net_buffer.hh  net_error.hh  net_initializer.hh  net_selector.cc  net_selector.hh  net_socket.cc  net_socket.hh  net_types.hh  server.cc
cplusplus/tyr2/: Build.py  CMakeLists.txt  Main.cc  Makefile  README.md  TAsyncLogging.cc  TAsyncLogging.h  TBlockingQueue.h  TBoundedBlockingQueue.h  TCondition.cc  TConfig.h  TCountdownLatch.cc  TCountdownLatch.h  TCurrentThread.cc  TCurrentThread.h  TDate.cc  TDate.h  TException.cc  TException.h  TFileUtil.cc  TFileUtil.h  TLogFile.cc  TLogFile.h  TLogStream.h  TLogging.cc  TLogging.h  TMutex.h  TPosixMutex.h  TProcess.cc  TProcess.h  TSmartPtr.h  TStringPiece.h  TThread.cc  TThreadLocal.h  TThreadPool.cc  TThreadPool.h  TTimeZone.cc  TTimeZone.h  TTimestamp.cc  TTimestamp.h  (+2 more)
cplusplus/vftable/: CMakeLists.txt  README.md  main.cc
gc/base/: CMakeLists.txt  base.h  main.cc  spinlock.h
network/KcpNet/: CMakeLists.txt
network/KcpNet2/: CMakeLists.txt
network/netproj/: CMakeLists.txt  main.cc  netop.cc  utility.cc  utility.h
opengl/gl00/: CMakeLists.txt  main.cc
(+8585 files in other folders)
